--- a/store.html
+++ b/store.html
@@ -24,7 +24,7 @@
     <div id="storeList">
         <!-- Store 1 -->
         <div class="store" data-location="Queensbay Mall">
-            <img src="image/outlet1.JPG" alt="Frosty Delight Store 1">
+            <img src="image/outlet1.jpg" alt="Frosty Delight Store 1">
             <div class="store-info">
                 <h3>Frosty Delight - Queenbay Mall</h3>
                 <p class="address">Bayan Lepas, Pulau Pinang</p>
@@ -35,7 +35,7 @@
 
         <!-- Store 2 -->
         <div class="store" data-location="Sunway Carnival Mall">
-            <img src="image/outlet2.JPG" alt="Frosty Delight Store 2">
+            <img src="image/outlet2.jpg" alt="Frosty Delight Store 2">
             <div class="store-info">
                 <h3>Frosty Delight - Sunway Carnival Mall</h3>
                 <p class="address">Seberang Jaya, Pulau Pinang</p>
@@ -46,7 +46,7 @@
 
         <!-- Store 3 -->
         <div class="store" data-location="Aeon Mall">
-            <img src="image/outlet3.JPG" alt="Frosty Delight Store 3">
+            <img src="image/outlet3.jpg" alt="Frosty Delight Store 3">
             <div class="store-info">
                 <h3>Frosty Delight - Aeon Mall</h3>
                 <p class="address">Kota Bharu, Kelantan</p>
@@ -57,7 +57,7 @@
 
         <!-- Store 4 -->
         <div class="store" data-location="Mayang Mall">
-            <img src="image/outlet4.JPG" alt="Frosty Delight Store 4">
+            <img src="image/outlet4.jpg" alt="Frosty Delight Store 4">
             <div class="store-info">
                 <h3>Frosty Delight - Mayang Mall</h3>
                 <p class="address">Kuala Terengganu, Terengganu</p>
